--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Itim&family=Kaisei+Decol&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" type="favicon" href="Afbeeldingen/Z2GERXNS_400x400.jpg">
+
 
 </head>
 
@@ -35,7 +35,7 @@
 
 
     <header>
-        <div class="headerfill1"></div>
+
 
 
         <nav>
@@ -48,184 +48,170 @@
             </ul>
         </nav>
 
-        <div class="headerfill3"></div>
+
 
     </header>
 
-    <div class="fill"></div>
-    <div class="fill"></div>
+
     <div class="universe">
 
-        <div class="universefill1"></div>
+
 
         <div class="universefill2">
-            <div class="fill-2"></div>
-            <div class="introduction-container">
-                <img class="wave" src="Afbeeldingen/wave.png" alt="wave">
-                <h2 class="introduction">Hey! I'm Luciano</h2>
-            </div>
-
-            <h1 class="software-developer">Software Developer</h1>
-            <div class="fill"></div>
-            <div class="fill"></div>
-            <div class="fill"></div>
-            <div class="fill"></div>
-            <div class="fill"></div>
 
 
-            <h3 class="projects" id="projects">projects</h3>
+            <section class="introduction-section">
+                <div class="introduction-container">
+                    <img class="wave" src="Afbeeldingen/wave.png" alt="wave">
+                    <h2 class="introduction">Hey! I'm Luciano</h2>
+                </div>
+
+                <h1 class="software-developer">Software Developer</h1>
+
+            </section>
 
 
-            <div class="fill"></div>
 
-            <div class="project-container-1">
+            <section class="projects-section">
 
-                <div class="richard-respect-button">
-                    <div class="project-window-1">
-                        <a href="https://placeholder.com" target="_blank">
-                            <img class="bed" src="Afbeeldingen/stock.jpg" alt="Sample Image" />
-                        </a>
+                <h3 class="projects" id="projects">projects</h3>
+
+                <div class="project-container-1">
+
+                    <div class="richard-respect-button">
+                        <div class="project-window-1">
+                            <a href="https://github.com/43v?tab=repositories" target="_blank">
+                                <img class="bed" src="Afbeeldingen/scr.png" alt="Sample Image" />
+                            </a>
+
+                        </div>
+                        <h3 class="tekst-project">Pink Goose</h3>
+                    </div>
+                    <div class="richard-respect-button">
+                        <div class="project-window-2">
+                            <a href="https://github.com/43v/Mastermind_Periode_2" target="_blank">
+                                <img class="bed" src="Afbeeldingen/masterm.png" alt="Sample Image" />
+                            </a>
+                        </div>
+                        <h3 class="tekst-project">Mastermind</h3>
+                    </div>
+                </div>
+
+
+
+
+
+            </section>
+
+
+            <section class="capabilities-section">
+                <h3 class="capabilities" id="capabilities">capabilities</h3>
+
+
+                <div class="capabilities-container">
+
+                    <div class="capability-tekst-container">
+                        <div class="capability1">
+                            <img class="bruhidk" src="Afbeeldingen/javascript.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">Javascript</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability2">
+                            <img class="bruhidk" src="Afbeeldingen/css.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">CSS</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability3">
+                            <img class="bruhidk" src="Afbeeldingen/java.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">Java</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability4">
+                            <img class="bruhidk" src="Afbeeldingen/php.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">PHP</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability5"></div>
+                        <h3 class="capability1-tekst">?</h3>
+                    </div>
+                </div>
+
+
+
+                <div class="capabilities-container">
+                    <div class="capability-tekst-container">
+                        <div class="capability11">
+                            <img class="bruhidk" src="Afbeeldingen/aftereffects.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">After Effects</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability22">
+                            <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">?</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability33">
+                            <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">?</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability44">
+                            <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">?</h3>
+                    </div>
+                    <div class="capability-tekst-container">
+                        <div class="capability55">
+                            <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
+                        </div>
+                        <h3 class="capability1-tekst">?</h3>
+                    </div>
+                </div>
+
+            </section>
+
+
+            <section class="bio-section">
+                <div class="bio-container">
+                    <h3 class="bio-header" id="bio">bio</h3>
+
+
+                    <div class="bio-alt">
+
+                        <div class="bio-picture"> <img class="bio-picture-class" src="Afbeeldingen/cat.jpg"
+                                alt="Javascript" /></div>
+                        <p class="bio-text"> Hi! I'm Luciano, 18 years old. <br> I am studying software
+                            development
+                            at ROC
+                            Technovium. <br> I have a passion for coding, especially in Java and Python
+                            <br> In my free time, I enjoy gaming, watching tech videos.
+                        </p>
 
                     </div>
-                    <h3 class="tekst-project">placeholder</h3>
-                </div>
-                <div class="richard-respect-button">
-                    <div class="project-window-2">
-                        <a href="https://placeholder.com" target="_blank">
-                            <img class="bed" src="Afbeeldingen/stock.jpg" alt="Sample Image" />
-                        </a>
-                    </div>
-                    <h3 class="tekst-project">placeholder</h3>
-                </div>
-            </div>
-
-            <div class="fill2"></div>
-
-            <div class="project-container-2">
-
-                <div class="richard-respect-button">
-                    <div class="project-window-3">
-                        <a href="https://placeholder.com" target="_blank">
-                            <img class="bed" src="Afbeeldingen/stock.jpg" alt="Sample Image" />
-                        </a>
-                    </div>
-                    <h3 class="tekst-project">placeholder</h3>
-                </div>
-
-                <div class="richard-respect-button">
-                    <div class="project-window-4">
-                        <a href="https://placeholder.com" target="_blank">
-                            <img class="bed" src="Afbeeldingen/stock.jpg" alt="Sample Image" />
-                        </a>
-                    </div>
-                    <h3 class="tekst-project">placeholder</h3>
 
                 </div>
-            </div>
-
-            <div class="fill"></div>
-            <div class="fill"></div>
-
-
-            <h3 class="capabilities"  id="capabilities">capabilities</h3>
-
-            <div class="fill"></div>
-            <div class="capabilities-container">
-
-                <div class="capability-tekst-container">
-                    <div class="capability1">
-                        <img class="bruhidk" src="Afbeeldingen/javascript.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">Javascript</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability2">
-                        <img class="bruhidk" src="Afbeeldingen/css.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">CSS</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability3">
-                        <img class="bruhidk" src="Afbeeldingen/java.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">Java</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability4">
-                        <img class="bruhidk" src="Afbeeldingen/php.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">PHP</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability5"></div>
-                    <h3 class="capability1-tekst">?</h3>
-                </div>
-            </div>
-
-            <div class="fill"></div>
-
-            <div class="capabilities-container">
-                <div class="capability-tekst-container">
-                    <div class="capability11">
-                        <img class="bruhidk" src="Afbeeldingen/aftereffects.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">After Effects</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability22">
-                        <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">?</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability33">
-                        <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">?</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability44">
-                        <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">?</h3>
-                </div>
-                <div class="capability-tekst-container">
-                    <div class="capability55">
-                        <img class="bruhidk" src="Afbeeldingen/x.png" alt="Javascript" />
-                    </div>
-                    <h3 class="capability1-tekst">?</h3>
-                </div>
-            </div>
-            <div class="fill"></div>
-            
-            <div class="fill"></div>
-            <div class="fill"></div>
-            <div class="bio-container">
-                <h3 class="bio-header" id="bio">bio</h3>
-
-
-                <div class="bio-alt">
-                
-                    <div class="bio-picture">    <img class="bio-picture-class" src="Afbeeldingen/icon.jpg" alt="Javascript" /></div>
-                    <p class="bio-text"> Hi! I'm Luciano, 18 years old. <br> I am studying software development at ROC
-                        Technovium. <br> Placeholder...Placeholder... Placeholder... Placeholder...  <br>Placeholder... Placeholder... Placeholder...  <br>Placeholder... Placeholder... Placeholder...  </p>
-
-                </div>
-
-            </div>
-
+            </section>
 
         </div>
 
-        <div class="universefill3"></div>
 
     </div>
 
 
     <footer>
-        <div class="footer-fill-1"></div>
+        <div class="footer-fill-1">
+
+            <h3 class="footer-fill-2-trademark">© 2025</h3>
+        </div>
         <div class="footer-fill-2">
-            <h3 class="footer-fill-2-trademark">© 2025 Luciano</h3>
+            <h3 class="footer-fill-2-trademark"> Luciano</h3>
 
         </div>
 
